--- a/flask/app/views/index.html
+++ b/flask/app/views/index.html
@@ -8,8 +8,8 @@
       <img src="{{ url_for('static', filename='broto.jpg') }}" alt="Imagem background" class="img-fluid" />
     </div>
 
-    <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center p-4">
-      <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo mb-3" />
+    <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center p-2">
+      <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo" />
       <h1 class="title mt-0">Sistema de Monitoramento Broto Fácil</h1>
       <p class="description">Veja a temperatura e umidade de sua planta.</p>
       <a class="btn btn-custom" href="{{ url_for('auth.login') }}">Acessar Dashboard</a>
