--- a/flask/app/static/styles.css
+++ b/flask/app/static/styles.css
@@ -26,8 +26,9 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
-    
+    background-color: #edf9f9;
     color: #4a4a4a;
+    padding-bottom: 200px;
 }
 
 .block-content {
@@ -40,7 +41,6 @@ body {
 
 .container {
     max-width: 1200px;
-    background-color: white;
     border-radius: 12px;
 }
 
@@ -61,8 +61,7 @@ img {
     font-size: 2.5rem;
     font-weight: bold;
     color: #66A404;
-    padding: 1rem;
-    text-align: center;
+    padding: 1rem 0;
 }
 
 .description {
@@ -107,8 +106,7 @@ img {
 }
 
 
-.box-access {
-}
+.box-access {}
 
 .cta-part {
     padding: 1rem 0;
@@ -117,20 +115,46 @@ img {
 
 .nav-bottom {
     position: fixed;
-    max-width: 500px;
-    width: 80%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    transform: translate(-50%, 0);
     left: 50%;
-    padding: 8px 25px;
-    border-radius: 50px;
-    background-color: #275902;
+    padding: 10px 25px;
+    background-color: #fff;
     z-index: 9999;
-    bottom: 1%;
+    bottom: 0;
+    box-shadow: 0px 0rem 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.nav-bottom .container {
     display: flex;
     gap: 10px;
     justify-content: space-around;
     align-items: center;
-    color: #fff;
+    color: #275902;
+    max-width: 500px;
+    position: relative;
+}
+
+.nav-bottom i {
+    color: #5e5f66;
+}
+
+.btn-center-nav-bottom i {
+    color: #fff !important;
+}
+
+.nav-bottom .btn-center-nav-bottom {
+    background-color: #66a404;
+    border-radius: 100%;
+    height: 65px;
+    width: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 10%;
+    left: 50%;
 }
 
 .font-12px {
@@ -142,4 +166,22 @@ img {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+}
+
+.container-button-data-filter .container-button{
+    max-width: 150px;
+}
+
+.container-button-data-filter .btn{
+    background-color: #fff;
+    box-shadow: 0px 5px 5px rgb(0 0 0 / 6%) !important;
+    transition: .5s;
+}
+
+.container-button-data-filter .btn:hover{
+    box-shadow: none !important;
+}
+
+.container-button-data-filter .container-button img{
+    max-width: 50px;
 }
