--- a/flask/app/views/dashboard.html
+++ b/flask/app/views/dashboard.html
@@ -1,16 +1,17 @@
 {% extends "templates/layout.html" %} {% block title %}Dashboard - Broto Fácil{%
 endblock %} {% block content %}
-<div class="container mt-4">
-  <a class="text-start" href="{{ url_for('home.index') }}">
-    <button class="btn btn-second"><i class="fa-solid fa-angles-left"></i> LOGOUT</button>
-  </a>
+<div class="container-sm">
 
-  <div class="row cta-part d-flex justify-content-center mt-3 mb-3">
-    <a href="{{ url_for('api.exportar_csv') }}" class="btn btn-custom">Exportar Dados para CSV</a>
+  <h1 class="title">Dashboard</h1>
+  
+  <div class="d-flex gap-2 justify-content-center my-3 py-2 bg-white rounded-4">
+    <a href="{{ url_for('api.exportar_csv') }}" style="min-width: 150px;" class="btn btn-custom"><i class="fa-solid fa-file-arrow-down me-2"></i>
+      CSV</a>
 
     <div class="dropdown">
-      <button class="btn btn-custom dropdown-toggle" type="button" id="filterButton" data-bs-toggle="dropdown" aria-expanded="false">
-        Filtrar por Período
+      <button class="btn btn-custom dropdown-toggle" type="button" style="min-width: 150px;" id="filterButton" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Filtrar
       </button>
       <ul class="dropdown-menu" aria-labelledby="filterButton">
         <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='1hora') }}">Última 1 hora</a></li>
@@ -19,105 +20,122 @@ endblock %} {% block content %}
         <li><a class="dropdown-item" href="{{ url_for('dashboard.dashboard', filtro='1mes') }}">Último 1 mês</a></li>
       </ul>
     </div>
-    </div>
-
-  <h1 class="title text-center">Dashboard</h1>
+  </div>
 
   <!-- Gráficos Resumo -->
   <div class="row">
-    <div class="col-6 col-md-4 col-lg-3">
+    <div class="col-6 col-md-4 col-lg-3 mt-3">
+      <div class="bg-white rounded-5 p-3 text-center h-100">
       <span class="fw-semibold">Temperatura (°C)</span>
       <canvas id="chartTempResumo" class="chart"></canvas>
+      </div>
     </div>
-    <div class="col-6 col-md-4 col-lg-3">
+    <div class="col-6 col-md-4 col-lg-3 mt-3">
+      <div class="bg-white rounded-5 p-3 text-center h-100">
       <span class="fw-semibold">Umidade (%)</span>
       <canvas id="chartUmidadeResumo" class="chart"></canvas>
     </div>
-    <div class="col-6 col-md-4 col-lg-3">
+    </div>
+    <div class="col-6 col-md-4 col-lg-3 mt-3">
+      <div class="bg-white rounded-5 p-3 text-center h-100">
       <span class="fw-semibold">Luminosidade (%)</span>
       <canvas id="chartLumResumo" class="chart"></canvas>
     </div>
-    <div class="col-6 col-md-4 col-lg-3">
+    </div>
+    <div class="col-6 col-md-4 col-lg-3 mt-3">
+      <div class="bg-white rounded-5 p-3 text-center h-100">
       <span class="fw-semibold">Umidade do Solo (%)</span>
       <canvas id="chartUmidadeSoloResumo" class="chart"></canvas>
     </div>
+    </div>
   </div>
 
-  <div class="accordion mt-5 border-0 shadow-sm" id="accordionExample">
-    <div class="accordion-item border-0">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          <h3>Temperatura (°C)</h3>
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-         
-           <!-- Gráfico de Temperatura -->
-  <div class="row mt-3">
-    <div class="col">
-      <canvas id="chartTemperatura" class="chart-big"></canvas>
-    </div>
+  <div class="mt-5 w-100">
+  <span>Dados do filtro</span>
+  <div class="d-flex gap-2 container-button-data-filter">
+    
+    <div class="container-button" >
+    <button onclick="openContainerData('container-temperatura')" class="btn rounded-4 d-flex flex-column gap-3 align-items-center justify-content-center">
+      <img src="{{ url_for('static', filename='icons/thermometer_1f321-fe0f.png') }}" class="w-100" style="object-fit:contain!important" />
+      <span class="font-12px">Temp.</span>
+    </button>
   </div>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item border-0">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <h3>Umidade (%)</h3>
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-           <!-- Gráfico de Umidade -->
-  <div class="row mt-3">
-    <div class="col">
-      
-      <canvas id="chartUmidade" class="chart-big"></canvas>
-    </div>
-  </div>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item border-0">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          <h3>Luminosidade (%)</h3>
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-         <!-- Gráfico de Luminosidade -->
-        <div class="row mt-3">
-          <div class="col">
-            
-            <canvas id="chartLuminosidade" class="chart-big"></canvas>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="accordion-item border-0">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-          <h3>Umidade do Solo (%)</h3>
-        </button>
-      </h2>
-      <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-           <!-- Gráfico de Umidade do Solo -->
-            <div class="row mt-3">
-              <div class="col">
-                <canvas id="chartUmidadeSolo" class="chart-big"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="container-button" >
+    <button onclick="openContainerData('container-umidade')" class="btn rounded-4 d-flex flex-column gap-3 align-items-center justify-content-center">
+      <img src="{{ url_for('static', filename='icons/sweat-droplets_1f4a6.png') }}" class="w-100" style="object-fit:contain!important" />
+      <span class="font-12px">Umid.</span>
+    </button>
   </div>
+
+    <div class="container-button" >
+    <button onclick="openContainerData('container-luminosidade')" class="btn rounded-4 d-flex flex-column gap-3 align-items-center justify-content-center">
+      <img src="{{ url_for('static', filename='icons/sun_2600-fe0f.png') }}" class="w-100" style="object-fit:contain!important" />
+      <span class="font-12px">Lumi.</span>
+    </button>
+  </div>
+
+    <div class="container-button" >
+    <button onclick="openContainerData('container-umidade-solo')" class="btn rounded-4 d-flex flex-column gap-3 align-items-center justify-content-center">
+      <img src="{{ url_for('static', filename='icons/herb_1f33f.png') }}"class="w-100" style="object-fit:contain!important" />
+      <span class="font-12px">Umi. Solo</span>
+    </button>
+  </div>
+
+  </div>
+</div>
+
+<div class="bg-white rounded-5 py-3 px-2 px-md-3 mt-2">
+<div class="row mt-3 container-temperatura">
+  <div class="col">
+    <h3>Temperatura (°C)</h3>
+    <canvas id="chartTemperatura" class="chart-big"></canvas>
+  </div>
+</div>
+
+<div class="row mt-3 container-umidade d-none">
+  <div class="col">
+    <h3>Umidade (%)</h3>
+    <canvas id="chartUmidade" class="chart-big"></canvas>
+  </div>
+</div>
+
+<div class="row mt-3 container-luminosidade d-none">
+  <div class="col">
+    <h3>Luminosidade (%)</h3>
+    <canvas id="chartLuminosidade" class="chart-big"></canvas>
+  </div>
+</div>
+
+<div class="row mt-3 container-umidade-solo d-none">
+  <div class="col">
+    <h3>Umidade do Solo (%)</h3>
+    <canvas id="chartUmidadeSolo" class="chart-big"></canvas>
+  </div>
+</div>
+</div>
+
+
+<script>
+  let containerTemperatura = document.querySelector('.container-temperatura');
+  let containerUmidade = document.querySelector('.container-umidade');
+  let containerLuminosidade = document.querySelector('.container-luminosidade');
+  let containerUmidadeSolo = document.querySelector('.container-umidade-solo');
+
+  function openContainerData(container){
+    closeContainersData();
+    console.log(container)
+    document.querySelector(`.${container}`).classList.remove('d-none');
+  }
+
+  function closeContainersData(){
+    containerTemperatura.classList.add('d-none');
+    containerUmidade.classList.add('d-none');
+    containerLuminosidade.classList.add('d-none');
+    containerUmidadeSolo.classList.add('d-none');
+  }
+</script>
+
 
 <!-- Estilos CSS -->
 <script>
