--- a/flask/app/views/templates/layout.html
+++ b/flask/app/views/templates/layout.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 </head>
 
-<body class="pb-5 mb-5">
+<body>
   <script>
     if ("serviceWorker" in navigator) {
       if (navigator.serviceWorker.controller) {
@@ -47,12 +47,12 @@
   {% endif %}
   {% endwith %}
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100" style="z-index: 99999;">
+  <nav class="navbar navbar-expand-lg position-fixed w-100" style="z-index: 99999;background-color: rgb(237 249 249);">
     <div class="container-fluid">
       <div style="gap: 12px;" class="d-flex gap-3 align-items-center">
-        <div class="shadow rounded-circle d-flex justify-content-center align-items-center"
-          style="height: 40px;width: 40px;">
-          <i class="fa-regular fa-user"></i>
+        <div class="p-2 rounded-circle d-flex justify-content-center align-items-center"
+          style="height: 40px;width: 40px;box-shadow: -3px 2px 10px 1px rgba(0, 0, 0, 0.15) !important;">
+          <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="w-100 object-contan" />
         </div>
         <div class="d-flex flex-column">
           <span class="font-12px opacity-75 text-success">
@@ -63,8 +63,8 @@
           </span>
         </div>
       </div>
-      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-second p-2 rounded-circle position-relative" style="height: 56px;width:56px"
-        type="button">
+      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-second p-2 rounded-circle position-relative"
+        style="height: 56px;width:56px" type="button">
         <i class="fa-solid fa-xl fa-arrows-rotate absolute-center"></i>
       </a>
   </nav>
@@ -74,15 +74,19 @@
   </div>
 
   <nav class="nav-bottom">
-    <a href="{{ url_for('home.index') }}" class="btn text-white">
-      <i class="fa-solid fa-house"></i>
-    </a>
-    <a href="{{ url_for('dashboard.dashboard') }}" class="btn text-white">
-      <i class="fa-solid fa-chart-pie fa-xl"></i>
-    </a>
-    <a href="{{ url_for('auth.login') }}" class="btn text-white">
-      <i class="fa-solid fa-user"></i>
-    </a>
+    <div class="container">
+      <a href="{{ url_for('home.index') }}" class="btn w-100">
+        <i class="fa-regular fa-circle fa-xl"></i>
+      </a>
+      <div class="w-100">
+      </div>
+      <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-center-nav-bottom">
+        <i class="fa-solid fa-chart-simple fa-xl"></i>
+      </a>
+      <a href="{{ url_for('auth.login') }}" class="btn w-100">
+        <i class="fa-regular fa-user fa-xl"></i>
+      </a>
+    </div>
   </nav>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
