--- a/flask/app/views/index.html
+++ b/flask/app/views/index.html
@@ -5,7 +5,7 @@
 <div class="container box-access overflow-hidden">
   <div class="row">
     <div class="col-md-6 p-0 d-flex align-items-center justify-content-center">
-      <img src="{{ url_for('static', filename='broto.jpg') }}" alt="Imagem background" class="img-fluid" />
+      <img src="{{ url_for('static', filename='broto.jpg') }}" alt="Imagem background" class="img-fluid rounded-5" />
     </div>
 
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center text-center p-4">
