--- a/flask/app/views/register.html
+++ b/flask/app/views/register.html
@@ -1,47 +1,49 @@
 {% extends "templates/layout.html" %} {% block title %}Registrar - Broto Fácil{%
 endblock %} {% block content %}
 
-<div class="container p-4">
-  <h1 class="title">Registrar</h1>
-  <form method="POST" action="">
-    {{ form.hidden_tag() }}
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="container p-4" style="max-width: 400px;">
+    <h1 class="title">Registrar</h1>
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
 
-    <div class="form-group">
-      {{ form.username.label(class_="form-label") }} {{
-      form.username(class_="form-control", size=32) }} {% for error in
-      form.username.errors %}
-      <span class="text-danger">[{{ error }}]</span>
-      {% endfor %}
-    </div>
+      <div class="form-group">
+        {{ form.username.label(class_="form-label") }} {{
+        form.username(class_="form-control", size=32) }} {% for error in
+        form.username.errors %}
+        <span class="text-danger">[{{ error }}]</span>
+        {% endfor %}
+      </div>
 
-    <div class="form-group">
-      {{ form.password.label(class_="form-label") }} {{
-      form.password(class_="form-control", size=32) }} {% for error in
-      form.password.errors %}
-      <span class="text-danger">[{{ error }}]</span>
-      {% endfor %}
-    </div>
+      <div class="form-group">
+        {{ form.password.label(class_="form-label") }} {{
+        form.password(class_="form-control", size=32) }} {% for error in
+        form.password.errors %}
+        <span class="text-danger">[{{ error }}]</span>
+        {% endfor %}
+      </div>
 
-    <div class="form-group">
-      {{ form.confirm_password.label(class_="form-label") }} {{
-      form.confirm_password(class_="form-control", size=32) }} {% for error in
-      form.confirm_password.errors %}
-      <span class="text-danger">[{{ error }}]</span>
-      {% endfor %}
-    </div>
+      <div class="form-group">
+        {{ form.confirm_password.label(class_="form-label") }} {{
+        form.confirm_password(class_="form-control", size=32) }} {% for error in
+        form.confirm_password.errors %}
+        <span class="text-danger">[{{ error }}]</span>
+        {% endfor %}
+      </div>
 
-    <div class="form-group">
-      {{ form.role.label(class_="form-label") }} {{
-      form.role(class_="form-control", size=32) }} {% for error in
-      form.role.errors %}
-      <span class="text-danger">[{{ error }}]</span>
-      {% endfor %}
-    </div>
+      <div class="form-group">
+        {{ form.role.label(class_="form-label") }} {{
+        form.role(class_="form-control", size=32) }} {% for error in
+        form.role.errors %}
+        <span class="text-danger">[{{ error }}]</span>
+        {% endfor %}
+      </div>
 
-    <div class="form-group d-flex justify-content-between text-center">
+      <div class="form-group d-flex justify-content-between text-center mt-4">
         <a class="btn btn-second" href="{{url_for('home.index')}}">Voltar</a>
-        {{ form.submit(class_="btn btn-custom") }}</div>
-  </form>
+        {{ form.submit(class_="btn btn-custom") }}
+      </div>
+    </form>
+  </div>
 </div>
-
 {% endblock %}
